Architecture project with MVVM and product filter commit!

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ flutter:
     - assists/Catagory/d5.png
     - assists/products/3.jpg
     - assists/products/d5.jpg
+    - assists/products/d6.jpg
 #     - images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
